# clean_cooking_hackathon

./: .gitignore  README.md  aggregate_data.json  index.html  three_day_hackathon_plan.md
analysis/: analyze_personas.py  personas.json
apps/survey/: .env.example  .gitignore  README.md  eCooking_SMS_Survey_Design.docx  eCooking_SMS_Survey_Question_Bank.xlsx  pyproject.toml
apps/survey/app/: cli.py  config.py  db.py  engine.py  gridcook.py  main.py  models.py  panel.py  phone.py  results.py  rewards.py  sms_text.py  survey_loader.py
apps/survey/app/gateways/: __init__.py  africastalking.py  base.py  console.py  twilio.py
apps/survey/app/routes/: api.py  demo.py  webhooks.py
apps/survey/app/static/: demo.html
apps/survey/surveys/: ecooking-baseline-1.yaml  ecooking-baseline-2.yaml  ecooking-baseline-3.yaml  ecooking-enrolment.yaml  ecooking-monthly-a.yaml  ecooking-monthly-b.yaml  ecooking-pulse-week-1.yaml  ecooking-pulse-week-2.yaml  ecooking-pulse-week-3.yaml  ecooking-quarterly.yaml  ecooking-rebaseline.yaml  panel.yaml
apps/survey/tests/: conftest.py  test_demo.py  test_engine.py  test_gridcook.py  test_instruments.py  test_loader.py  test_panel.py  test_phone.py  test_sms_text.py  test_webhooks.py
data/: 001_baseline.sql  002_not_null_composite_pks.sql  DB_CONTRACT.md  build_db.py  load_oloika_dataset_sqlite.py  migrate.py  oloika.sqlite  oloika_write.py  test_oloika_write.py
docs/: architecture.md  code-review-2026-07-09.md  oloika_data_schema_and_prediction_notes.md
ml/: Dockerfile  HOW_IT_WORKS.md  README.md  requirements.txt
ml/api/: README.md  (+5 more)
(+171 files in other folders)
