[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minigrid-sms-survey"
version = "0.1.0"
description = "Two-way SMS surveys for rural electric minigrid customers in Kenya"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
survey = "app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
